2007-01-31  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/prettytable.cpp:
	
	Killed libgnome !

2007-01-31  Benoît Dejean  <benoit@placenet.org>
	
	* help/bg/*:
	
	Dropped some generated files.
	Added updated bg.po.

2007-01-30  Benoît Dejean  <benoit@placenet.org>

	* Makefile.am:
	* configure.in:
	* help/C/Makefile.am:
	* help/C/gnome-system-monitor.xml:
	* help/Makefile.am:
	* help/bg/Makefile.am:

	Converted to gnome-doc-utils.
	Patch by <paroz@email.ch>.
	See #352507.

2007-01-30  Benoît Dejean  <benoit@placenet.org>

	* src/proctable.cpp:
	
	Set a min width for the Command Line column.
	Closes #328287.

2007-01-29  Benoît Dejean  <benoit@placenet.org>

	* src/callbacks.cpp:
	
	Fixed help display by using GnomeVFS.
	Closes #402013.

2007-01-25  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Bumped version number to match GNOME's version.

2007-01-25  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/load-graph.cpp:
	
	Use Bézier curves in graphs.
	Patch by Lucas Mazzardo Veloso  <lmveloso@din.uem.br>

2007-01-22  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.17.6.

2007-01-22  Benoît Dejean  <benoit@placenet.org>

	* src/procman.h:
	* src/proctable.cpp:
	
	Turned ProcInfo into a real object.
	Dropped the slice-allocator, not that important.

2007-01-22  Benoît Dejean  <benoit@placenet.org>

	reviewed by: <delete if not using a buddy>

	* src/procman.h:
	* src/proctable.cpp:

2007-01-22  Benoît Dejean  <benoit@placenet.org>

	* src/proctable.cpp:

	Re-added the GNOME logo.
	Patch by Luca Cavalli  <luca.cavalli@gmail.com>

2007-01-22  Benoît Dejean  <benoit@placenet.org>

	* src/interface.cpp:
	
	Little cleanup.

2007-01-20  Benoît Dejean  <benoit@placenet.org>

	* src/util.cpp (SI_gnome_vfs_format_file_size_for_display):
	
	Rewritten.
	Overall CPU usage goes from 7.5% to 5.0%.

2007-01-18  Dennis Cranston  <dennis_cranston@yahoo.com>

	* src/sysinfo.cpp:  Use HIG capitalization
