@@ -1,3 +1,11 @@
+2007-02-05  Benoît Dejean  <benoit@placenet.org>
+
+	* src/sysinfo.cpp:
+	
+	Solaris support.
+	Patch by <hua.zhang@sun.com>.
+	See #374090.
+
 2007-01-31  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
